name:                libellula
version:             0.1.0.0
synopsis:            Like a Dragonfly.
description:         Like a Dragonfly.
license:             MIT
license-file:        LICENSE
author:              Alfredo Di Napoli
maintainer:          alfredo.dinapoli@gmail.com
-- copyright:           
category:            Sound
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

library
  -- other-modules:       
  -- other-extensions:    
  build-depends:
    base >=4.6 && < 5
  hs-source-dirs:
    src
  ghc-options:
    -Wall
    -threaded
    -funbox-strict-fields
  default-language:
    Haskell2010

executable libellula
  main-is:
    Main.hs
  other-modules:
    Site
    Application
    Extras
  -- other-extensions:    
  build-depends:
    aeson                     >= 0.7.0.0,
    base >=4.6 && < 5         ,
    bytestring                >= 0.9.1   && < 0.11,
    containers                >= 0.5.0.0,
    heist                     >= 0.14    && < 0.15,
    lens                      >= 3.7.6   && < 4.7,
    MonadCatchIO-transformers >= 0.2.1   && < 0.4,
    mtl                       >= 2       && < 3,
    snap                      >= 0.13    && < 0.14,
    snap-core                 >= 0.9     && < 0.10,
    snap-server               >= 0.9     && < 0.10,
    snap-loader-static        >= 0.9     && < 0.10,
    text                      >= 0.11    && < 1.3,
    time                      >= 1.1     && < 1.5,
    xmlhtml                   >= 0.1     && < 0.3
  hs-source-dirs:
    server
  default-language:    Haskell2010

  if flag(development)
    build-depends:
      snap-loader-dynamic == 0.10.*
    cpp-options: -DDEVELOPMENT
    ghc-options: -threaded -w
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-orphans -fno-warn-unused-do-bind