name:                libellula
version:             0.1.0.0
synopsis:            Like a Dragonfly.
description:         Like a Dragonfly.
license:             MIT
license-file:        LICENSE
author:              Alfredo Di Napoli
maintainer:          alfredo.dinapoli@gmail.com
category:            Sound
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
    Libellula.API
  build-depends:
    base               ,
    text               ,
    attoparsec         ,
    mtl                ,
    containers
  hs-source-dirs:
    src
  ghc-options:
    -Wall
    -Werror
    -threaded
    -funbox-strict-fields
  default-language:
    Haskell2010

executable libellula
  main-is:
    Server.hs
  hs-source-dirs:
    server
  other-modules:
  -- other-extensions:    
  build-depends:
    aeson                     ,
    base                      ,
    servant                   ,
    servant-swagger           ,
    text
  default-language:    Haskell2010
  ghc-options: -threaded -Wall -Werror -fwarn-tabs -funbox-strict-fields -O2
                 
test-suite libellula-tests
  type:
    exitcode-stdio-1.0
  main-is:
    Main.hs
  other-modules:
    Tests
  hs-source-dirs:
    test
  default-language:
    Haskell2010
  ghc-options:
    -threaded
    "-with-rtsopts=-N"
  build-depends:
      libellula -any
    , base
    , QuickCheck
    , tasty
    , tasty-quickcheck
    , tasty-hunit
    , text