name:                flipped-classroom-frontend
version:             0.1.0.0
synopsis:            The flipped classroom microservice frontend
description:         Please see README.md
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck
                     , atlas
  if impl(ghcjs)
    cpp-options:       -DGHCJS_BROWSER
    build-depends:     ghcjs-base
                     , ghcjs-prim
                     , ghcjs-dom
                     , ghcjs-jquery
                     , ghcjs-handsontable
  default-language:    Haskell2010


executable flipped-classroom-frontend
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , flipped-classroom-frontend
  default-language:    Haskell2010